refactor: rewrite git tutorial content to be more professional

--- a/docs/git-tutorial/pro_git_20250101.md
+++ b/docs/git-tutorial/pro_git_20250101.md
@@ -1,46 +1,40 @@
 ---
 slug: progit-1-1-version-control
-title: "1.1 Version Control — 所以，到底什么是版本控制？"
+title: "1.1 Version Control — 关于版本控制"
 authors: [yeezi]
 tags: [git, progit, 读书笔记]
 date: 2025-01-01T20:00:00
 ---
 
-最近重刷了一遍《Pro Git》，也就是大家常说的 Git 圣经。说实话，平时 `git add`、`git commit` 用得挺溜，但真要问我底层是个啥原理，我还真有点虚。
-为了不让自己“知其然不知其所以然”，我决定把这次重读的心得整理出来。不搞那些干巴巴的定义，咱们就聊聊我的理解。
+本文是对《Pro Git》第一章“版本控制”部分的整理与总结。在熟练使用 `git add` 和 `git commit` 等基础命令之余，理解版本控制系统的底层逻辑与演进历史，对于深入掌握工具至关重要。
 
 <!-- truncate -->
 
-## 所谓的“版本控制”
+## 什么是版本控制
 
-说白了，版本控制就是程序员的**后悔药**。
+版本控制（Version Control）是一种记录一个或若干文件内容变化，以便将来查阅特定版本修订情况的系统。
 
-你写毕业论文或者做设计图的时候肯定经历过这种绝望：
-*   `论文_初稿.doc`
-*   `论文_修改版.doc`
-*   `论文_最终版.doc`
-*   `论文_打死不改版.doc`
-*   `论文_绝对是最后一版_v2.doc`
+在没有版本控制系统之前，许多人通过复制文件并重命名（如 `论文_v1.doc`, `论文_v2.doc`）的方式来备份工作。这种做法虽然简单，但极易出错，例如混淆版本或意外覆盖重要文件。
 
-这就是最原始的版本控制——**人肉版本控制**。这种方法的缺点显而易见：容易搞混，而且占地方。一不小心覆盖了文件，那就只能哭着重写了。
+## 版本控制系统的演变
 
-## 从“个人战”到“团队战”
+### 1. 本地版本控制系统 (Local VCS)
+为了解决手动管理的混乱，人们开发了本地版本控制系统（如 **RCS**）。它的工作原理是在本地磁盘上建立一个数据库，记录文件的所有修订差异（Patch）。通过应用这些差异，系统可以随时重构出文件的任意历史版本。
 
-### 1. 本地时代 (RCS)
-为了不让大家手动复制文件，以前有个叫 **RCS** 的东西。它的逻辑很简单：只记录文件每次的**变化部分**（补丁）。想回退版本的时候，就把这些补丁反向打回去。这就好比你只记住了“今天比昨天多吃了一碗饭”，而不是记住了“今天吃了三碗饭”。
+### 2. 集中式版本控制系统 (Centralized VCS)
+为了解决多人协作的问题，出现了集中式版本控制系统（如 **CVS**, **SVN**）。
+这也引入了一个单一的集中管理服务器，保存所有文件的修订版本。协同工作的开发者通过客户端连接到这台服务器，取出最新的文件或提交更新。
+*   **优点**：便于管理，且能看到其他人在做什么。
+*   **缺点**：**拥有单点故障风险**。如果中央服务器发生故障，所有人都无法提交更新；如果磁盘损坏且未备份，所有历史记录将永久丢失。
 
-### 2. 集中时代 (SVN/CVS)
-后来大家要一起干活了，RCS 这种只能在自己电脑上玩的就不行了。这就有了 **SVN**。
-SVN 有一个中央服务器，大家都连上去修修补补。
-*   **好处**：管理员爽了，谁干了啥一目了然。
-*   **坏处**：**服务器是单点故障**。如果服务器断网，大家全歇菜；如果服务器硬盘坏了没备份，那真就是“火葬场”现场，所有历史记录瞬间蒸发，只剩下你手头的一份最新代码。
+### 3. 分布式版本控制系统 (Distributed VCS)
+Git 属于分布式版本控制系统（DVCS）。
+在分布式系统中，客户端不仅仅是检出最新版本的文件快照，而是把代码仓库**完整地镜像**下来，包括完整的历史记录。
 
-### 3. 分布式时代 (Git)
-这就是我们现在用的 **Git**。
-Git 最牛的地方在于：**它不只是下载最新代码，而是把整个代码仓库的“祖宗十八代”全都克隆到你本地**。
+这意味着：
+*   每一次克隆（Clone）操作，实际上都是一次对代码仓库的完整备份。
+*   即使服务器发生故障，也可以利用任何一个客户端的本地镜像来恢复服务器。
+*   大多数操作都可以在本地进行（如查看历史、切换分支），无需网络连接，速度极快且高效。
 
-这意味着什么？
-意味着你电脑里有一份**完整**的备份。哪怕公司的服务器被陨石砸了，随便找个同事的电脑，都能把服务器还原出来。而且因为历史记录都在本地，像查看日志、切换分支这些操作，快得简直不讲道理。
-
-**个人感悟**：
-从 RCS 到 Git，其实就是一部**从“怕丢文件”到“怕服务器挂”，最后通过“人人都是服务器”来解决焦虑**的进化史。
+**总结**：
+版本控制从简单的本地文件备份，发展到集中式管理，最终演进为分布式的架构，其核心驱动力是对数据安全、协作效率以及去中心化的追求。
