--- a/docs/git-tutorial/pro_git_20250104.md
+++ b/docs/git-tutorial/pro_git_20250104.md
@@ -1,36 +1,26 @@
 ---
 slug: git-01-04-command-line
-title: "1.4 Command Line — 为什么我们还要用命令行？"
+title: "1.4 Command Line — 命令行模式"
 authors: [yeezi]
 tags: [git, progit, cli]
 date: 2025-01-04T17:00:00
 ---
 
-很多新人入坑 Git 时都会问：“现在 SourceTree、GitHub Desktop 甚至 VS Code 自带的 Git 工具这么好用，为啥还要苦哈哈地背命令行？”
-
-这也是我当年的疑问。但用了几年后，我变成了“命令行吹”。
+在学习 Git 时，我们有多种工具可供选择，包括传统的命令行工具（CLI）和各种现代化的图形用户界面（GUI）。
 
 <!--truncate-->
 
-## 图形界面是“残血版”
+## 为什么要使用命令行？
 
-GUI 工具为了界面简洁，通常只把最常用的功能（commit, push, pull, merge）做成了按钮。
-但 Git 有很多高级功能（比如交互式 rebase、二分查找 bug、精细的分支管理），在图形界面里要么找不到，要么藏得很深。
+虽然图形界面工具（如 SourceTree, GitHub Desktop, VS Code 内置 Git）在日常操作中非常直观便捷，但命令行工具依然是学习 Git 的最佳途径，原因如下：
 
-**命令行才是 Git 的完全体**。只有在终端里，你才能发挥 Git 100% 的威力。
+1.  **功能完整性**：
+    命令行是唯一支持 Git **所有**命令的地方。许多高级功能和复杂操作（如复杂的 Rebase、二分查找等）在 GUI 中并没有完全实现或难以找到。
 
-## 通用性才是王道
+2.  **通用性**：
+    掌握了命令行，你可以在任何操作系统、任何服务器环境中使用 Git，而无需依赖特定的图形软件。
 
-*   你会了 SourceTree，换家公司不让你装盗版软件咋办？
-*   你会了 VS Code 的 Git 插件，换台 Linux 服务器或者只有终端的测试环境咋办？
-*   **但 `git commit` 在哪都是 `git commit`。**
+3.  **理解原理**：
+    通过输入命令，能更清晰地理解 Git 的工作流程和操作逻辑。
 
-学会了命令行，你就掌握了底层逻辑，再去看任何图形工具，无非就是“这个按钮对应那个命令”而已，上手极快。反之则不然。
-
-## 给新手的建议
-
-刚开始接触，确实记不住那么多参数。我的建议是：
-**强迫自己用一段时间终端**。哪怕是最简单的 `git status` 和 `git add`。
-遇到复杂的 ihr rebase 或者看非常复杂的 diff，我也用 GUI，这不丢人。**工具是为了效率服务的，谁快用谁，但底层原理得懂。**
-
-接下来的笔记，我都会用命令行来演示，咱们一起习惯在黑底白字中操作的感觉。
+因此，本教程将主要通过终端命令行来讲解 Git 的使用。当你熟悉了这些命令后，自然也能更游刃有余地使用各种图形化工具。
