--- a/docs/git-tutorial/pro_git_20250107.md
+++ b/docs/git-tutorial/pro_git_20250107.md
@@ -1,44 +1,37 @@
 ---
 slug: git-01-07-getting-help
-title: "1.7 Getting Help — RTFM? 这可能不是个好主意"
+title: "1.7 Getting Help — 获取帮助"
 authors: [yeezi]
 tags: [git, progit, help, cli]
 date: 2025-01-07T14:00:00
 ---
 
-在使用 Git 的过程中，难免会遇到“我是谁？我在哪？这个命令咋用？”的灵魂发问。
-技术圈常说 **RTFM** (Read The Fucking Manual)，但对于 Git 来说，直接读手册可能会让你更晕。
+Git 拥有丰富的命令和参数。在使用过程中，如果我们忘记了某个命令的用法，有多种方式可以获取帮助信息。
 
 <!--truncate-->
 
-## 别轻易用 `git help <verb>`
+## 使用命令行帮助
 
-书上教你用 `git help config` 或者 `man git-config`。
-这会打开 Git 的官方手册（Manpage）。
+你可以通过以下三种方式查看 Git 命令的详细手册（Manpage）：
 
-**相信我，除非你想研究语言学或者底层原理，否则别看那个。**
-Git 的官方文档写得非常学术、严谨，但也非常枯燥。对于初学者，你看完第一段可能就睡着了。
+1.  `git help <verb>`
+2.  `git <verb> --help`
+3.  `man git-<verb>`
 
-## `-h` 才是你的真爱
+例如，要查看 `config` 命令的详细帮助：
 
-大多数时候，你只是忘了某个参数是 `-a` 还是 `-A`。
-这时候，用 `-h`：
+```bash
+git help config
+```
+
+这些命令通常会打开系统手册页，内容非常详尽和严谨，包含了该命令的所有参数说明和使用示例。对于初学者来说，官方手册可能略显晦涩，但它是最权威的参考资料。
+
+## 快速参考
+
+如果你只是想快速查看某个命令有哪些可用选项，可以使用 `-h` 参数。这会输出一段简洁的帮助信息：
 
 ```bash
 git add -h
 ```
 
-这会给你一个**极简**的小抄（Cheat Sheet）。没有废话，只有参数列表。这才是我们真正需要的。
-
-## 真遇到问题了怎么办？
-
-如果你遇到了复杂的合并冲突，或者 `detached HEAD` 这种鬼东西：
-1.  **Google 报错信息**。
-2.  **Stack Overflow**。
-3.  **ChatGPT/Copilot**。
-
-现在是 2025 年了，即使是资深程序员，也不需要背诵所有 Git 命令。**懂得如何精准地搜索答案，比背手册重要得多。**
-
-**本章小结**：记住 `git <command> -h` 用来查参数，剩下的交给搜索引擎。
-
-对了，如果你英语还行，Freenode IRC 上的 `#git` 频道依然活跃着一群热心的（也可能是暴躁的）老黑客，那里是最后的求助站。
+这通常比查阅完整手册更加高效，不仅能看到常用的参数缩写，还能快速回忆起命令的语法结构。
