--- a/docs/git-tutorial/pro_git_20250108_01.md
+++ b/docs/git-tutorial/pro_git_20250108_01.md
@@ -1,25 +1,24 @@
 ---
 slug: git-01-08-summary
-title: "1.8 Summary — 第一章复盘：别小看基础"
+title: "1.8 Summary — 第一章总结"
 authors: [yeezi]
 tags: [git, progit, summary]
 date: 2025-01-08T09:00:00
 ---
 
-第一章终于啃完了。虽然都是些理论和配置，看起来没啥“干货”，且慢，这些其实才是区分“Git 搬运工”和“Git 工程师”的分水岭。
+至此，我们要完成了 《Pro Git》第一章的学习。本章主要涵盖了 Git 的基础理论和环境准备，为后续的实际操作打下了基础。
 
 <!--truncate-->
 
-## 我学到了啥？
+## 核心知识点回顾
 
-1.  **Git 不只是个搬运工**：它不做增量备份，它做的是**全量快照**。这就像每次都给整个项目拍 CT，而不是只拍断了的那根骨头。
-2.  **“三态”是核心**：**已提交**、**已修改**、**已暂存**。我刚开始学觉得“暂存区”是脱裤子放屁，被坑了几次后才发现它是真的香——它给了我在提交前第二次反悔（和整理代码）的机会。
-3.  **配置**：名字和邮箱配好，编辑器选个顺手的（求别用 Vim 折磨自己了，除非你是大神）。
-4.  **RTFM**：遇到问题 `-h` 一下，比去百度搜出来的陈年老帖靠谱。
+1.  **快照流 (Snapshot Stream)**：
+    Git 与其他版本控制系统的根本区别在于，Git 记录的是项目文件的全量快照，而非差异变化。
+2.  **三种状态 (Three States)**：
+    理解 **已提交 (Committed)**、**已修改 (Modified)** 和 **已暂存 (Staged)** 的区别，以及工作目录、暂存区和 Git 仓库之间的流转关系，是使用 Git 的核心。
+3.  **环境配置**：
+    正确配置 `user.name` 和 `user.email` 是使用 Git 的前提。
+4.  **获取帮助**：
+    学会使用 `git help <command>` 或 `git <command> -h` 来查阅文档。
 
-## 接下来？
-
-理论吹完了，下一章我们就开始真刀真枪地干。
-我们要建仓库、提交代码、看历史记录。说白了，就是要把 Git 用到日常肌肉记忆里去。
-
-准备好咖啡，我们要开始敲黑底白字的命令行了。第二章走起！
+在接下来的章节中，我们将进入实战环节，学习如何创建仓库、跟踪文件修改以及提交更新等日常操作。
