--- a/docs/git-tutorial/pro_git_20250108_04.md
+++ b/docs/git-tutorial/pro_git_20250108_04.md
@@ -1,55 +1,55 @@
 ---
 slug: git-02-03-viewing-history
-title: "2.3 Viewing History — 当个 Git 考古学家"
+title: "2.3 Viewing History — 查看提交历史"
 authors: [yeezi]
 tags: [git, progit, cli]
 date: 2025-01-08T12:00:00
 ---
 
-代码提交了千八百次，出了 Bug 怎么办？
-这时候你就得学会用 `git log` 去翻旧账了。这可不仅仅是看一眼谁最后改的代码那么简单。
+在提交了若干更新，或者克隆了某个项目之后，你可能想回顾一下提交历史。完成这个任务最简单而强大的工具是 `git log` 命令。
 
 <!--truncate-->
 
-## 最简单的时光机 (git log)
+## 基本用法
 
-如果不加参数，它就是个流水账。按 `q` 退出。
-但说实话，默认输出信息太多，有时候看不过来。
+不带任何参数运行 `git log`，Git 会按时间顺序列出所有的提交，最近的更新排在最上面。
+它会显示：
+*   SHA-1 校验和
+*   作者的名字和电子邮件
+*   提交时间
+*   提交说明
 
-## 我常用的几个神仙参数
+## 常用选项
 
-1.  **想看具体改了啥 (-p)**
-    ```bash
-    git log -p -2
-    ```
-    这个 `-p` 也就是 Patch（补丁），直接把代码差异甩你脸上。`-2` 表示只看最近两次。CR (Code Review) 自己的代码时很有用。
+`git log` 提供了非常丰富的选项来定制输出格式和筛选历史记录。
 
-2.  **只想看个大概 (--stat)**
-    同事提交了一堆东西，你只想知道他动了哪些文件？
-    ```bash
-    git log --stat
-    ```
-    这会显示类似：`index.tsx | 5 +--` 这样的统计信息，一目了然。
-
-3.  **装酷 (Graph)**
-    在终端里看分支图：
-    ```bash
-    git log --oneline --graph --all
-    ```
-    五颜六色的线，看着就能感觉分支有多乱。
-
-## 真正的杀手锏：搜索 (-S)
-
-这是我压箱底的一招。
-假设你发现某个核心函数 `calculate_price` 居然在这个版本里找不到了！你想知道是**哪个败家子**把它删了，或者是哪次重构把它改名了。
-普通的 `grep` 只能搜现在的文件，但 Git 可以搜为了过去：
+### 1. 简略显示
+使用 `--oneline` 选项可以将每个提交压缩到一行显示，非常适合查看大量的提交历史。
 
 ```bash
-git log -S calculate_price
+git log --oneline
 ```
 
-Git 会从盘古开天辟地开始遍历所有提交，只把**涉及这个字符串增删**的那些 commit 找出来。
-这招用来甩锅简直一查一个准。
+### 2. 显示差异
+使用 `-p` 选项可以显示每次提交所引入的差异（补丁）。如果不希望显示全部内容，可以配合 `-2` 限制显示的日志条数（显示最近 2 次）。
 
----
-学会了 `git log`，你就不再是只能盯着当前代码发呆的初学者了，你是拥有了穿越时空查看上下文能力的考古学家。
+```bash
+git log -p -2
+```
+
+### 3. 图形化显示
+使用 `--graph` 选项可以在左侧绘制一个 ASCII 字符组成的图形，形象地展示分支和合并历史。
+
+```bash
+git log --oneline --graph --all
+```
+
+## 限制输出长度
+
+除了上述选项外，你还可以根据时间、作者等条件进行筛选：
+
+*   `--since=2.weeks`：列出最近两周的所有提交。
+*   `--author="John"`：列出指定作者的提交。
+*   `--grep="fix"`：搜索提交说明中包含 "fix" 的提交。
+
+掌握 `git log` 的使用，能帮助你快速理清项目的演进脉络，定位历史问题。
