--- a/docs/git-tutorial/pro_git_20250102.md
+++ b/docs/git-tutorial/pro_git_20250102.md
@@ -1,36 +1,31 @@
 ---
 slug: progit-1-2-history
-title: "1.2 Getting Started — Linux 之父的愤怒与 Git 的诞生"
+title: "1.2 Getting Started — Git 的简史"
 authors: [yeezi]
 tags: [git, progit, 读书笔记]
 date: 2025-01-02T19:00:00
 ---
 
-这节讲 Git 的历史，其实挺有意思的。Git 并不是哪个公司为了商业目的精心设计的，而是 Linus Torvalds（Linux 之父）**特别是生气**的时候搞出来的。
+Git 的诞生与 Linux 内核的开发密切相关。了解 Git 的历史，有助于理解其设计哲学：速度、简单的设计、对非线性开发模式的强力支持、完全分布式以及有能力高效管理超大规模项目。
 
 <!-- truncate -->
 
-## 被逼出来的神器
+## 诞生背景
 
-直到 2002 年，Linux 内核这么大个项目，居然都没用正经的版本控制工具。Linus 觉得当时的工具（像 CVS）都太难用了，根本配不上 Linux。
+Linux 内核开源项目在早期的维护过程中，并没有使用正式的版本控制工具。直到 2002 年，Linux 项目组开始使用一个名为 **BitKeeper** 的分布式版本控制系统。
 
-后来他们试用了一个叫 **BitKeeper** 的商业软件，虽然好用，但是要钱。BitMover 公司看在 Linux 面子上，让他们免费用了三年。
+到了 2005 年，由于开发社区与 BitKeeper 的商业公司之间发生了关系破裂，Linux 社区失去了免费使用 BitKeeper 的权利。这迫使 Linux 社区（特别是 Linux 之父 Linus Torvalds）必须要开发一套属于自己的版本控制工具。
 
-结果 2005 年，社区里有人试图破解 BitKeeper 的协议，把人家惹毛了：“免费给你们用还搞破解？收回授权！”
-这下 Linux 源码没地儿放了。
+## 设计目标
 
-Linus 也是个暴脾气，他看了一圈市面上的工具，觉得没一个能打的。于是他决定自己造轮子。他的要求很“变态”：
-1.  **必须要快**（Linux 内核太大了，慢一点会疯）。
-2.  **必须是分布式的**（不仅是为了安全，也是为了不被卡脖子）。
-3.  **要支持非线性开发**（成千上万个分支并行）。
+基于对 BitKeeper 的使用经验，以及对已有系统的不足之处的反思，Linus 对新工具提出了明确的目标：
 
-## 两周封神
+1.  **速度**：必须要极快，以适应内核开发庞大的文件量。
+2.  **简单的设计**：架构清晰简洁。
+3.  **非线性开发支持**：必须有力支持数千个并行的分支开发。
+4.  **完全分布式**：每个开发者都有完整的仓库副本。
+5.  **高效管理**：能够像 Linux 内核一样高效地管理大规模项目。
 
-最离谱的是，Linus 大概只用了**两周**就写出了 Git 的原型。两周啊！很多人两周连个 PPT 都写不完。
-紧接着，这个工具就被用来管理 Linux 源码了。
+## 快速发展
 
-## 我的看法
-
-Git 的诞生故事其实告诉我们两件事：
-1.  **核心工具必须掌握在自己手里**。如果当初 Linux 继续依赖 BitKeeper，后果不堪设想。
-2.  **大神就是大神**。觉得工具不顺手就自己写一个更好的，这种解决问题的思路和执行力，才是我们该学的。虽然我们写不出 Git，但写个自动脚本提升下效率还是可以的嘛。
+Git 的原型开发非常迅速。自 2005 年诞生以来，Git 已经逐渐完善并成为了最流行的版本控制系统。它保留了最初设计时的灵活性和速度，同时在功能和易用性上不断进化，成为了现代软件开发的标准工具。
