--- a/docs/git-tutorial/pro_git_20250103.md
+++ b/docs/git-tutorial/pro_git_20250103.md
@@ -1,46 +1,45 @@
 ---
 slug: progit-1-3-basics
-title: "1.3 Git Basics — 别再把 Git 当作 SVN 用了！"
+title: "1.3 Git Basics — Git 基础概念"
 authors: [yeezi]
 tags: [git, progit, 读书笔记]
 date: 2025-01-03T18:00:00
 ---
 
-这一节绝对是全书最硬核、最颠覆认知的一部分。
-**如果你以前用过 SVN，请先把之前的习惯全忘掉，不然你永远理解不了 Git 为什么这么设计。**
+本节介绍 Git 的核心概念。理解这些概念是掌握 Git 的关键，因为 Git 在对待数据的方式上，与 Subversion (SVN) 等其他版本控制系统有着本质的区别。
 
 <!-- truncate -->
 
-## 根本区别：快照 vs 差异
+## 核心区别：快照 (Snapshot) 与 差异 (Delta)
 
-这是 Git 和其他工具最大的不同。
+这是 Git 与其他 VCS 最主要的区别：
 
-*   **SVN 的思路**：它记录的是**变化**。比如“版本1改了第3行”，“版本2删了第5行”。这就像是记流水账。
-*   **Git 的思路**：它记录的是**快照（Snapshot）**。
-    也就是每当你 commit 的时候，Git 会把当前所有的文件**拍一张照片**存下来。如果文件没改，它就存个链接指向上次的照片（省空间）。
+*   **其他系统 (如 SVN)**：将数据看作是一组文件的变化。它们记录的是每个文件在不同版本之间的差异（Delta-based）。
+*   **Git**：将数据看作是小型文件系统的一组**快照**。
+    每次提交更新时，Git 都会对当前的全部文件制作一个快照并保存这个快照的索引。为了效率，如果文件没有修改，Git 不会重新存储该文件，而是只保留一个链接指向之前存储的文件。
 
-**这也解释了为啥 Git 切换分支这么快**：它不需要去计算一堆补丁来还原文件，它只需要把指针指到另一张“照片”上，然后把你的工作区“刷”成那张照片的样子就行了。
+## 近乎所有的操作都是本地执行
 
-## 绝大部分操作都在本地
+在 Git 中的绝大多数操作都只需要访问本地文件和资源，一般不需要来自网络上其它计算机的信息。
 
-我刚用 Git 时候很不习惯，总觉得不做点什么联网操作心里不踏实。
-但 Git 绝大多数命令（`log`, `status`, `commit`, `diff`, `branch`）都是在读写本地磁盘。
+*   **速度优势**：因为不需要网络延迟，像浏览项目历史、比较版本差异等操作几乎是瞬间完成的。
+*   **离线工作**：在没有网络的情况下（如飞机上、火车上），你依然可以进行提交（Commit）、创建分支和查看日志，待有网络时再推送到远程仓库。
 
-这就很爽了：
-*   **断网也能干活**：坐飞机、高铁，或者公司 VPN 挂了，完全不影响你提交代码、看历史记录。
-*   **速度极快**：没有网络延迟。
+## Git 保证完整性
 
-## Git 的三位一体
+Git 中所有的数据在存储前都会计算校验和（Checksum），然后以校验和来引用。这意味着不可能在 Git 不知情的情况下更改文件内容或目录结构。
 
-这个概念不搞懂，用 Git 就是瞎撞。Git 把你的文件分成三个区域：
+Git 使用 **SHA-1** 算法计算校验和，其结果是一个 40 位的十六进制字符串。Git 数据库中也是通过通过文件内容的哈希值来索引，而不是文件名。
 
-1.  **已提交 (Committed)**：东西已经进数据库了，安全了。 -> **.git 目录**
-2.  **已修改 (Modified)**：你改了文件，但还没告诉 Git。 -> **工作目录**
-3.  **已暂存 (Staged)**：你挑出了哪些文件要提交，放在一边准备着。 -> **暂存区**
+## Git 的三种状态
 
-**我的最佳实践**：
-我以前经常不管三七二十一直接 `git commit -a`，把所有修改一股脑提交。
-后来我学乖了，我会在**暂存区**这一步多停顿一下：用 `git add` 挑出逻辑相关的修改放进去，分多次提交。这样生成的 Commit Log 清清爽爽，以后查问题方便多了。
+这是 Git 中最重要的概念之一。Git 有三种主要的状态，你的文件可能处于其中之一：
 
----
-总结一下：**暂存区**是 Git 给我们也是给队友的一个缓冲，好好利用它，别总是一股脑全扔进去。
+1.  **已提交 (Committed)**：数据已经安全地保存在本地数据库中。
+2.  **已修改 (Modified)**：修改了文件，但还没保存到数据库中。
+3.  **已暂存 (Staged)**：对一个已修改文件的当前版本做了标记，使之包含在下次提交的快照中。
+
+由此引入了 Git 项目的三个工作区域：
+*   **Git 仓库 (Repository)**：用来保存项目的元数据和对象数据库的地方。
+*   **工作目录 (Working Directory)**：对项目的某个版本独立提取出来的内容。
+*   **暂存区 (Staging Area)**：保存了下次将提交的文件列表信息（也称为 Index）。
