--- a/docs/git-tutorial/pro_git_20250108_02.md
+++ b/docs/git-tutorial/pro_git_20250108_02.md
@@ -1,43 +1,48 @@
 ---
 slug: git-02-01-getting-repository
-title: "2.1 Repo Basics — 要么自己建，要么抄作业"
+title: "2.1 Repo Basics — 获取 Git 仓库"
 authors: [yeezi]
 tags: [git, progit, repo, init, clone]
 date: 2025-01-08T10:00:00
 ---
 
-这章是实战篇的开始。
-获取 Git 仓库说白了就两招：要么是你自己新开个项目（`init`），要么是你去把别人的项目搬回家（`clone`）。
+本章开始介绍 Git 的基础操作。通常有两种方式来获取一个 Git 仓库：一种是将本地现有的目录转换为 Git 仓库，另一种是从服务器克隆现有的 Git 仓库。
 
 <!--truncate-->
 
-## 方式一：白手起家 (git init)
+## 在现有目录中初始化仓库 (git init)
 
-如果你有个项目想开始用 Git 管理：
+如果你有一个尚未进行版本控制的项目目录，想要用 Git 来管理它，需要执行以下步骤：
 
-1.  进入那个文件夹： `cd my_project`
-2.  敲下神圣的： `git init`
+1.  进入项目目录：
+    ```bash
+    cd my_project
+    ```
+2.  执行初始化命令：
+    ```bash
+    git init
+    ```
 
-你会发现多了一个 `.git` 文件夹（看不到是因为隐藏了）。
-**重点**：这时候你的代码还没被 Git 管起来呢！`init` 只是修好了仓库这个“房子”，你还得把家具（文件）搬进去（add & commit）。
+该命令会在当前目录下创建一个名为 `.git` 的子目录，其中包含了 Git 仓库的所有必需文件（骨架）。此时，项目中的文件还没有被跟踪。你需要使用 `git add` 和 `git commit` 来进行初次提交。
 
-## 方式二：全盘拷贝 (git clone)
+## 克隆现有的仓库 (git clone)
 
-这也就是我们常说的“拉代码”。但 Git 的 Clone 比 SVN 的 Checkout 猛多了。
-SVN Checkout 只是拿到了最新的那份代码。
-Git Clone 是把人家**祖宗十八代的所有历史记录**全都搬到你电脑上了。
+如果你想获取一份已经存在的 Git 仓库（例如 GitHub 上的开源项目）的拷贝，需要使用 `git clone` 命令。
 
 ```bash
 git clone https://github.com/libgit2/libgit2
 ```
 
-**我的经验**：
-大部分时候我们都是用 `git clone`。
-有个小技巧，如果你想克隆下来后改个文件夹名字（比如不想叫 libgit2，想叫 my-lib），直接加在后面就行：
+执行该命令后，Git 会做以下几件事：
+1.  在当前目录下创建一个名为 `libgit2` 的文件夹。
+2.  初始化一个 `.git` 目录。
+3.  **下载该仓库的所有数据**（包括所有历史版本）。
+4.  检出最新版本的代码到工作目录。
+
+如果你想在这个命令中自定义本地仓库的名字，可以指定第二个参数：
 
 ```bash
-git clone https://github.com/libgit2/libgit2 my-lib
+git clone https://github.com/libgit2/libgit2 mylibgit
 ```
 
-这就省得克隆完再去重命名了，多优雅。
-至于协议，HTTPS 最简单无脑，SSH 适合配置好密钥的老手（不用每次输密码）。新手建议先用 HTTPS 跑通再说。
+Git 支持多种传输协议，最常见的是 `https://` 协议，此外还支持 `git://` 或 `ssh://` 等协议。
