--- a/docs/git-tutorial/pro_git_20250108_03.md
+++ b/docs/git-tutorial/pro_git_20250108_03.md
@@ -1,67 +1,69 @@
 ---
 slug: git-02-02-recording-changes
-title: "2.2 Recording Changes — 搬砖人的日常三连"
+title: "2.2 Recording Changes — 记录每次更新"
 authors: [yeezi]
 tags: [git, progit, status, diff, cli]
 date: 2025-01-08T11:00:00
 ---
 
-仓库有了，接下来就是干货环节。
-我在公司写代码，90% 的时间都在重复这个循环：写代码 -> 检查状态 -> 暂存 -> 提交。
+现在我们已经有了一个 Git 仓库，并且检出了文件。接下来我们将进行日常的开发流程：修改文件，将更新暂存，并提交到仓库中。
 
 <!--truncate-->
 
-## 1. 强迫症的第一步 (git status)
+## 检查当前文件状态 (git status)
 
-不管你刚才干了啥，最好先敲一下：
+查看哪些文件处于什么状态，主要的命令是 `git status`。
+如果在克隆仓库后立即运行此命令，你会看到类似 "working tree clean" 的提示，说明所有文件都已跟踪且未被修改。
+
+如果此时你在目录下创建了一个新文件（例如 `README.md`），再次运行 `git status`，Git 会将其标记为 **Untracked files**（未跟踪文件）。
+
+## 跟踪新文件 / 暂存已修改文件 (git add)
+
+使用 `git add` 命令可以将文件纳入 Git 的管理（开始跟踪），或者将已修改的文件放入暂存区。
+
 ```bash
-git status
-```
-这就像开车前看一眼仪表盘。它会告诉你哪些文件变了，哪些还是这种“未跟踪”的野生状态。
-**老鸟建议**：用更简练的 `-s` 参数：
-```bash
-git status -s
-```
-要是看到红色的 `??`，那是新文件；红色的 `M` 是改了没暂存；绿色的 `M` 是已经暂存好了。清清爽爽。
-
-## 2. 也是万能的 (git add)
-
-注意，Git 里的 `add` 意思很多。
-*   对新文件：开始追踪它。
-*   对修改过的文件：把它放入暂存区。
-*   对冲突文件：标记为“我解决完了”。
-
-所以别管三七二十一，只要想提交，先 `git add` 肯定没错。
-
-**关于 .gitignore**：
-有些东西（比如 `node_modules` 或者是你的 `.env` 密钥文件）千万别传上去。
-在项目根目录建个 `.gitignore` 文件，把名字写进去。
-*记得尽早建这个文件，如果文件已经提交过了，再加 ignore 是没用的。*
-
-## 3. 到底改了哪？ (git diff)
-
-有时候 `git status` 告诉我 `README.md` 变了，但我忘了我改了啥。
-*   `git diff`：看**工作区**改了啥（还没 add 的）。
-*   `git diff --staged`：看**暂存区**里准备提交的是啥。
-
-这对写 Commit Message 很有帮助，不然你都不知道自己在提交个啥。
-
-## 4. 盖棺定论 (git commit)
-
-最后一步。
-```bash
-git commit -m "feat: 终于写完这个功能了"
+git add README.md
 ```
 
-如果你懒得每次都 `add`，对于那些**已经被追踪过**的文件，可以直接跳过 add：
-```bash
-git commit -a -m "fix: 修复小 bug"
+`git add` 是一个多功能命令：
+*   对未跟踪文件：开始跟踪。
+*   对已修改文件：放入暂存区。
+*   对合并冲突文件：标记为已解决。
+
+## 忽略文件 (.gitignore)
+
+通常我们会有一些不需要 Git 管理的文件，比如编译生成的临时文件、日志文件等。我们可以创建一个名为 `.gitignore` 的文件来列出要忽略的模式。
+
+示例 `.gitignore`：
+```gitignore
+# 忽略所有 .a 结尾的文件
+*.a
+# 但 lib.a 除外
+!lib.a
+# 忽略 build/ 目录下的所有文件
+build/
 ```
-这招虽然省事，但千万小心别把不想提交的测试代码顺手带上去了。
 
-## 5. 提桶跑路与反悔
+## 查看已暂存和未暂存的修改 (git diff)
 
-*   **删除**：`git rm filename`。这就不仅仅是删文件，还顺便告诉 Git 别记它了。
-*   **重命名**：`git mv old new`。Git 很聪明，它知道你是在重命名，不是删了旧的创建一个新的。
+`git status` 只能告诉你文件是否被修改，而 `git diff` 可以告诉你具体修改了哪些内容。
 
-从今天起，养成 `status` -> `add` -> `commit` 的肌肉记忆吧。
+*   **`git diff`**：查看**工作目录**与**暂存区**之间的差异（即查看尚未暂存的修改）。
+*   **`git diff --staged`**：查看**暂存区**与**最后一次提交**之间的差异（即查看即将提交的内容）。
+
+## 提交更新 (git commit)
+
+当所有需要保存的修改都已暂存后，就可以提交了：
+
+```bash
+git commit
+```
+这将启动你配置的文本编辑器，让你输入提交说明。
+
+你也可以使用 `-m` 选项直接在命令行中输入提交说明：
+
+```bash
+git commit -m "Add getting started guide"
+```
+
+注意：只有在暂存区（Staged）中的变化才会被提交。
