docs: rewrite content with senior expert tone

--- a/docs/git-tutorial/pro_git_20250102.md
+++ b/docs/git-tutorial/pro_git_20250102.md
@@ -1,31 +1,47 @@
 ---
 slug: progit-1-2-history
-title: "1.2 Getting Started — Git 的简史"
+title: "1.2 Getting Started — 读懂历史，才能理解设计"
 authors: [yeezi]
-tags: [git, progit, 读书笔记]
+tags: [git, progit, 历史底蕴]
 date: 2025-01-02T19:00:00
 ---
 
-Git 的诞生与 Linux 内核的开发密切相关。了解 Git 的历史，有助于理解其设计哲学：速度、简单的设计、对非线性开发模式的强力支持、完全分布式以及有能力高效管理超大规模项目。
+每一个伟大的工具背后，往往都有一段充满争议与变革的历史。对于 Git 而言，它的诞生并非源于刻意的商业规划，而是源于开源社区因为“痛点”爆发而产生的一次绝地反击。
+
+要真正理解 Git 为什么会设计成今天这个样子——特别是它对分布式的执着和对速度的苛求——我们必须把时钟拨回到 2005 年。
 
 <!-- truncate -->
 
-## 诞生背景
+## 混乱中的秩序
 
-Linux 内核开源项目在早期的维护过程中，并没有使用正式的版本控制工具。直到 2002 年，Linux 项目组开始使用一个名为 **BitKeeper** 的分布式版本控制系统。
+试想一下，像 Linux 内核这样拥有上百万行代码、几千名贡献者的超大型项目，在 2002 年之前竟然没有一套像样的版本控制工具。Linus Torvalds 和核心维护者们，在很长一段时间里，甚至还在使用手动合并补丁的方式来管理代码。这在今天看来是不可想象的，但在当时，这确实是无奈之举。
 
-到了 2005 年，由于开发社区与 BitKeeper 的商业公司之间发生了关系破裂，Linux 社区失去了免费使用 BitKeeper 的权利。这迫使 Linux 社区（特别是 Linux 之父 Linus Torvalds）必须要开发一套属于自己的版本控制工具。
+他们排斥早期的集中式版本控制系统（如 CVS），原因很简单：对于 Linux 这样分布在全球的协作网络来说，集中式的架构太慢、太脆弱，且无法支持复杂的非线性开发。
 
-## 设计目标
+## BitKeeper 的启示与决裂
 
-基于对 BitKeeper 的使用经验，以及对已有系统的不足之处的反思，Linus 对新工具提出了明确的目标：
+2002 年，Linux 社区做出了一个艰难的决定：采用一套名为 **BitKeeper** 的商业分布式版本控制系统。BitMover 公司出于善意，授权 Linux 社区免费使用。这是 Linux 开发者们第一次体验到分布式版本控制（DVCS）带来的高效。
 
-1.  **速度**：必须要极快，以适应内核开发庞大的文件量。
-2.  **简单的设计**：架构清晰简洁。
-3.  **非线性开发支持**：必须有力支持数千个并行的分支开发。
-4.  **完全分布式**：每个开发者都有完整的仓库副本。
-5.  **高效管理**：能够像 Linux 内核一样高效地管理大规模项目。
+然而，开源社区追求自由的基因与商业软件闭源的本质，注定会发生冲突。2005 年，为了研究 BitKeeper 的协议细节，社区内发生了一些试图逆向工程的事件，导致 BitMover 公司收回了免费使用权。
 
-## 快速发展
+这成了历史的转折点。
 
-Git 的原型开发非常迅速。自 2005 年诞生以来，Git 已经逐渐完善并成为了最流行的版本控制系统。它保留了最初设计时的灵活性和速度，同时在功能和易用性上不断进化，成为了现代软件开发的标准工具。
+Linus 既然用过了“好东西”，就再也无法忍受回到过去。他需要一个新的工具，但当时市面上没有一个开源工具能同时满足他对性能、分布式和数据完整性的极高要求。
+
+于是，他决定自己写一个。
+
+## 十天诞生的奇迹
+
+从 2005 年 4 月 3 日开始开发，到 4 月 6 日发布对外公告，再到 4 月 18 日不仅成功实现了自举（用 Git 管理 Git 自己的源码），甚至还能完成第一次大规模合并。Git 的早期开发速度快得令人咋舌。
+
+这个新工具的核心设计目标非常明确，至今未变：
+
+1.  **极速 (Speed)**：对于操作庞大的 Linux 内核，延迟必须是毫秒级的。
+2.  **设计简单 (Simple Design)**：底层架构必须清晰、健壮。
+3.  **对非线性开发的支持 (Non-linear development)**：能够轻松应对成千上万个并行的分支。
+4.  **完全分布式 (Fully Distributed)**：不依赖中心节点。
+5.  **有能力管理超大规模项目**：这是为 Linux 量身定制的底线。
+
+## 结语
+
+当我们今天在终端敲下 `git commit` 时，我们使用的不仅仅是一个工具，更是当年那场关于开源自由与协作效率的博弈的产物。Git 的每一个特性——从快照存储到轻量级分支，都深深烙印着那一时期 Linux 社区对于高效协作的深刻理解。
