--- a/docs/git-tutorial/pro_git_20250103.md
+++ b/docs/git-tutorial/pro_git_20250103.md
@@ -1,45 +1,55 @@
 ---
 slug: progit-1-3-basics
-title: "1.3 Git Basics — Git 基础概念"
+title: "1.3 Git Basics — 思维方式的重构"
 authors: [yeezi]
-tags: [git, progit, 读书笔记]
+tags: [git, progit, 核心原理]
 date: 2025-01-03T18:00:00
 ---
 
-本节介绍 Git 的核心概念。理解这些概念是掌握 Git 的关键，因为 Git 在对待数据的方式上，与 Subversion (SVN) 等其他版本控制系统有着本质的区别。
+如果你之前使用的是 Subversion (SVN) 或者 Perforce，在转入 Git 的世界时，你需要做的第一件事不是学习命令，而是**遗忘**。
+
+Git 与其他版本控制系统的核心区别，不在于命令行的语法，而在于它对待数据的方式。如果不理解这一点，你虽然也能使用 Git，但你很大程度上只是把它当成了一个更好用的 SVN，而无法发挥其真正的威力。
 
 <!-- truncate -->
 
-## 核心区别：快照 (Snapshot) 与 差异 (Delta)
+## 范式的转变：差异 vs 快照
 
-这是 Git 与其他 VCS 最主要的区别：
+传统版本控制系统（CVCS）通常将数据视为**一组文件的变化**。
+这种系统的思维模型是：“版本 1 是文件 A 和 B；版本 2 是在版本 1 的基础上，文件 A 修改了第 3 行……”这就是所谓的**基于差异（Delta-based）**的版本控制。
 
-*   **其他系统 (如 SVN)**：将数据看作是一组文件的变化。它们记录的是每个文件在不同版本之间的差异（Delta-based）。
-*   **Git**：将数据看作是小型文件系统的一组**快照**。
-    每次提交更新时，Git 都会对当前的全部文件制作一个快照并保存这个快照的索引。为了效率，如果文件没有修改，Git 不会重新存储该文件，而是只保留一个链接指向之前存储的文件。
+Git 则完全不同。Git 更像是一个小型的文件系统。
+每当你提交更新，或者保存项目状态时，Git 实际上是对当时的所有文件制作了一个**快照（Snapshot）**，并保存了这个快照的索引。
 
-## 近乎所有的操作都是本地执行
+*   **为了效率**：如果一个文件没有被修改，Git 不会重复存储它，而是仅仅存储一个指向前一个版本的链接。
+*   **本质**：Git 在保存的是**随着时间推移的项目状态流**，而不是变化的累积。
 
-在 Git 中的绝大多数操作都只需要访问本地文件和资源，一般不需要来自网络上其它计算机的信息。
+这种底层设计的差异，决定了 Git 在分支管理上的轻盈和高效。
 
-*   **速度优势**：因为不需要网络延迟，像浏览项目历史、比较版本差异等操作几乎是瞬间完成的。
-*   **离线工作**：在没有网络的情况下（如飞机上、火车上），你依然可以进行提交（Commit）、创建分支和查看日志，待有网络时再推送到远程仓库。
+## 三种状态：Git 的生命周期
 
-## Git 保证完整性
+理解 Git 的工作流程，核心在于理解数据在三个区域之间的流转。这是很多初学者容易混淆的地方，但也是 Git 最精妙的设计之一。
 
-Git 中所有的数据在存储前都会计算校验和（Checksum），然后以校验和来引用。这意味着不可能在 Git 不知情的情况下更改文件内容或目录结构。
+你的文件在 Git 中时刻处于以下三种状态之一：
 
-Git 使用 **SHA-1** 算法计算校验和，其结果是一个 40 位的十六进制字符串。Git 数据库中也是通过通过文件内容的哈希值来索引，而不是文件名。
+1.  **已提交 (Committed)**
+    数据已经安全地保存在本地数据库中。这就像是你已经按下快门，照片已经冲洗出来并存入相册。
 
-## Git 的三种状态
+2.  **已修改 (Modified)**
+    你修改了文件，但还没有保存到数据库中。这就像是你调整了相机的焦距或构图，但还没按快门。
 
-这是 Git 中最重要的概念之一。Git 有三种主要的状态，你的文件可能处于其中之一：
+3.  **已暂存 (Staged)**
+    这是一个非常独特的中间状态。你对一个已修改的文件做了标记，表示它将包含在下一次提交的快照中。这就像是你挑选好了要把哪些景物框进取景器，准备拍摄。
 
-1.  **已提交 (Committed)**：数据已经安全地保存在本地数据库中。
-2.  **已修改 (Modified)**：修改了文件，但还没保存到数据库中。
-3.  **已暂存 (Staged)**：对一个已修改文件的当前版本做了标记，使之包含在下次提交的快照中。
+这引出了 Git 项目的三个工作区域：
+*   **工作目录 (Working Directory)**：你平时写代码、看得到的那个文件夹。这只是从数据库中提取出的某一个版本的“投影”。
+*   **暂存区 (Staging Area)**：通常只是一个文件，保存了下次将要提交的文件列表信息。
+*   **Git 仓库 (Repository)**：保存项目数据的地方。
 
-由此引入了 Git 项目的三个工作区域：
-*   **Git 仓库 (Repository)**：用来保存项目的元数据和对象数据库的地方。
-*   **工作目录 (Working Directory)**：对项目的某个版本独立提取出来的内容。
-*   **暂存区 (Staging Area)**：保存了下次将提交的文件列表信息（也称为 Index）。
+## 为什么要有暂存区？
+
+不少开发者觉得暂存区多此一举：为什么不能像 SVN 一样直接提交？
+
+这就涉及到了**提交的原子性**和**逻辑的清晰性**。
+有些时候，你在同一个文件里既修复了一个 Bug，又开发了一个新功能。如果没有暂存区，你只能把这两个不相关的修改混在一次提交里。而有了暂存区，你可以先 `add` 修复 Bug 的代码并提交，然后再 `add` 新功能的代码并提交。
+
+这种精细化的控制，让我们的版本历史不仅仅是代码的备份，更成为了一份逻辑清晰的项目演进日志。
