--- a/docs/git-tutorial/pro_git_20250104.md
+++ b/docs/git-tutorial/pro_git_20250104.md
@@ -1,26 +1,38 @@
 ---
 slug: git-01-04-command-line
-title: "1.4 Command Line — 命令行模式"
+title: "1.4 Command Line — 为什么在这个时代我们依然推崇命令行"
 authors: [yeezi]
-tags: [git, progit, cli]
+tags: [git, progit, CLI, 工程师文化]
 date: 2025-01-04T17:00:00
 ---
 
-在学习 Git 时，我们有多种工具可供选择，包括传统的命令行工具（CLI）和各种现代化的图形用户界面（GUI）。
+在图形用户界面（GUI）如此发达的今天，VS Code、SourceTree、GitKraken 等工具已经把 Git 的操作封装得非常精美。那么，作为一名追求卓越的工程师，我们为什么还要花时间去记忆那些枯燥的命令行指令？
+
+这并非是为了展示某种“黑客”式的优越感，而是基于对工具掌控力的务实考量。
 
 <!--truncate-->
 
-## 为什么要使用命令行？
+## 图形界面的“降维”
 
-虽然图形界面工具（如 SourceTree, GitHub Desktop, VS Code 内置 Git）在日常操作中非常直观便捷，但命令行工具依然是学习 Git 的最佳途径，原因如下：
+所有的 GUI 工具，本质上都是对底层 Git 命令的封装和简化。为了让界面简洁易用，开发者往往会隐藏那些复杂但强大的参数，或者将某种特定的工作流固化为按钮。
 
-1.  **功能完整性**：
-    命令行是唯一支持 Git **所有**命令的地方。许多高级功能和复杂操作（如复杂的 Rebase、二分查找等）在 GUI 中并没有完全实现或难以找到。
+换句话说，当你使用 GUI 时，你是在使用**别人为你定义好的 Git**。
 
-2.  **通用性**：
-    掌握了命令行，你可以在任何操作系统、任何服务器环境中使用 Git，而无需依赖特定的图形软件。
+*   **功能子集**：你所能使用的功能，受限于 GUI 工具的开发进度。Git 的新特性往往要过很久才会出现在图形界面中。
+*   **操作黑盒**：当你在界面上点击“同步”按钮报错时，你往往不知道底层到底发生了什么——是网络问题？是合并冲突？还是 Refspec 错误？
 
-3.  **理解原理**：
-    通过输入命令，能更清晰地理解 Git 的工作流程和操作逻辑。
+## 命令行意味着普适性
 
-因此，本教程将主要通过终端命令行来讲解 Git 的使用。当你熟悉了这些命令后，自然也能更游刃有余地使用各种图形化工具。
+除此之外，还有一个更现实的原因：**通用性**。
+
+无论你是在自己的 MacBook 上，还是远程 SSH 连到一台 Linux 服务器，亦或是临时借用同事的 Windows 电脑，命令行环境永远都在那里。
+
+*   **GUI 随时可能变**：SourceTree 可能会升级 UI，GitHub Desktop 可能会改变按钮位置。
+*   **CLI 永远稳定**：Git 的核心命令语法在过去的十几年里几乎没有发生断裂式的变化。
+
+掌握了命令行，意味着你掌握了一种**“一次学习，随处可用”**的技能。
+
+当然，这并不意味着我们要排斥 GUI。在查看复杂的 diff 差异、浏览提交历史图谱时，图形界面的直观性是命令行无法比拟的。
+**资深的开发者通常是混合型的使用者**：在需要精细控制（如 Rebase, Cherry-pick）时使用命令行，在需要快速浏览变更时使用 GUI。
+
+但在你能够熟练驾驭这两种方式之前，我建议先从命令行开始。因为只有懂得了底层原理，你才能真正看懂图形界面在帮你做什么。
