--- a/docs/git-tutorial/pro_git_20250105.md
+++ b/docs/git-tutorial/pro_git_20250105.md
@@ -1,18 +1,22 @@
 ---
 slug: git-01-05-install-git
-title: "1.5 Installing Git — 安装指南"
+title: "1.5 Installing Git — 工欲善其事"
 authors: [yeezi]
-tags: [git, progit, installation]
+tags: [git, progit, 环境搭建]
 date: 2025-01-05T16:00:00
 ---
 
-在开始使用 Git 之前，需要在你的计算机上安装它。Git 支持 Linux、macOS 和 Windows 等主流操作系统。
+在开始这段旅程之前，我们首先需要准备好我们的“武器”。
+虽然安装软件听起来是最基础不过的步骤，但对于跨平台的开发者来说，选择正确的安装方式往往能为日后的开发规避掉很多隐形的坑。
 
 <!--truncate-->
 
-## 在 Linux 上安装
+## Linux：回归本源
 
-在 Linux 上，通常通过发行版的包管理器进行安装。
+如果你是 Linux 用户，那么恭喜你，你拥有得天独厚的优势。Git 本就在 Linux 上诞生，因此在 Linux 上的体验最为原汁原味。
+
+通常我们直接使用发行版自带的包管理器即可。
+但作为一名对技术有追求的开发者，我建议你关注一下版本问题。很多长期支持版（LTS）的 Linux 发行版，为了稳定性，软件仓库里的 Git 版本可能比较老旧。
 
 *   **Debian/Ubuntu**:
     ```bash
@@ -23,31 +27,25 @@ date: 2025-01-05T16:00:00
     sudo dnf install git-all
     ```
 
-## 在 macOS 上安装
+如果你发现源里的版本太老（比如落后了两三年），不妨考虑从源码编译安装。这不仅能让你用上最新的功能，也是一次了解 Linux 软件构建过程的好机会。
 
-macOS 提供了多种安装方式：
+## macOS：优雅与便捷
 
-1.  **Xcode Command Line Tools** (推荐)：
-    在终端中尝试运行 `git --version`。如果尚未安装，系统会提示你就行安装。
-2.  **Homebrew**:
-    如果你安装了 Homebrew，可以运行：
-    ```bash
-    brew install git
-    ```
+Mac 用户通常有两种选择。
 
-## 在 Windows 上安装
+1.  **Xcode Command Line Tools**：
+    这是最官方的途径。当你第一次在终端输入 `git` 时，如果系统没装，macOS 会贴心地弹窗提示你安装。这种方式最省心，且与系统结合得最好。
 
-Windows 用户可以通过以下方式安装：
+2.  **Homebrew**：
+    如果你也是 Homebrew 的重度用户（你应该要是），那么 `brew install git` 可能是更好的选择。它不仅版本更新快，而且管理起来非常方便，不会污染系统目录。
 
-1.  **官方安装包**：
-    访问 [git-scm.com](https://git-scm.com/download/win) 下载最新的 Windows 安装程序。安装过程中建议保留默认选项，特别是关于 PATH 环境变量的配置。
-2.  **winget**:
-    ```powershell
-    winget install --id Git.Git -e --source winget
-    ```
+## Windows：打破隔阂
 
-安装完成后，打开终端（Windows 下建议使用 Git Bash 或 PowerShell），输入以下命令验证安装是否成功：
+在很长一段时间里，Windows 上的 Git 体验并不尽如人意。但随着 **Git for Windows** 的完善，我们现在已经可以获得非常接近 Linux 的体验了。
 
-```bash
-git --version
-```
+访问 [git-scm.com](https://git-scm.com/download/win) 下载安装包时，安装向导会问你很多问题。
+这也是我想特别提醒的一点：**请仔细阅读每一个选项，而不是无脑点击 Next。**
+
+特别是关于 **PATH 环境配置** 和 **换行符处理 (Line Ending)** 的部分。
+*   建议选择 "Git from the command line and also from 3rd-party software"，这样你可以在 PowerShell 中直接通过 `git` 命令调用它，而不需要每次都打开专门的 Git Bash。
+*   换行符建议选择 "Checkout Windows-style, commit Unix-style line endings" (core.autocrlf = true)，这能有效避免跨平台协作时因为回车换行符不同而导致的“整个文件都被修改”的惨剧。
