--- a/docs/git-tutorial/pro_git_20250106.md
+++ b/docs/git-tutorial/pro_git_20250106.md
@@ -1,45 +1,54 @@
 ---
 slug: git-01-06-first-configuration
-title: "1.6 First Configuration — 初次运行配置"
+title: "1.6 First Configuration — 身份与习惯的定义"
 authors: [yeezi]
-tags: [git, progit, config]
+tags: [git, progit, 配置]
 date: 2025-01-06T15:00:00
 ---
 
-安装完 Git 后的第一件事，就是设置你的用户名称和邮件地址。这是非常重要的一步，因为每一个 Git 的提交都会使用这些信息，并且它们会写入到你的每一次提交中，不可更改。
+安装完 Git 并不意味着我们可以立刻开始工作。这就好比买了一辆新车，上路前你得先调整好座椅、后视镜，并输入导航回家的地址。
+Git 需要知道“你是谁”，以及你习惯“怎么工作”。
+
+这些配置只需要做一次，但它们将伴随你的整个开发生涯。
 
 <!--truncate-->
 
-## 配置用户信息
+## 数字化你的身份
 
-请打开终端，运行以下命令来配置你的全局用户名和邮箱：
+在分布式协作网络中，信任的基础是身份。Git 的每一次提交（Commit）都会永久性地烙印上作者的名字和邮箱。
+
+请务必慎重地在终端输入以下命令：
 
 ```bash
 git config --global user.name "Your Name"
 git config --global user.email "your_email@example.com"
 ```
 
-*   `--global` 选项表示这台机器上所有的 Git 仓库都会默认使用这个配置。
-*   如果你需要在某个特定项目中使用不同的身份（例如工作项目与个人项目区分），可以在该项目目录下运行不带 `--global` 的命令。
+这里的 `--global` 参数意味着，除非你在具体的项目中另行指定，否则这台机器上所有的 Git 操作都将代表你本人。
 
-## 配置文本编辑器
+**经验分享**：
+经常有新人问我：“这里的邮箱需要和 GitHub 账号的邮箱一致吗？”
+答案是：最好一致。GitHub 等代码托管平台正是通过这个邮箱地址，将代码提交记录关联到你的账户头像上的。如果你这里乱填，虽然提交不会报错，但在 GitHub 的贡献图（绿格子）上，这些代码可能就不会算在你头上了。
 
-Git 可能会调用你系统中的默认文本编辑器（如提交信息编辑、解决合并冲突时）。如果你想使用自己熟悉的编辑器（如 VS Code），可以进行如下配置：
+## 选择趁手的兵器
+
+当 Git 需要你输入这类长篇大论的信息时（比如撰写提交说明），它会自动调用系统默认的文本编辑器。
+在 Linux 上这通常是 Vi 或 Vim。如果你还没做好准备面对 Vim 陡峭的学习曲线，可能会陷入“无法保存退出”的窘境。
+
+我强烈建议你将其配置为你熟悉的现代编辑器，比如 VS Code：
 
 ```bash
 git config --global core.editor "code --wait"
 ```
+这样，Git 就会弹出一个 VS Code 窗口让你输入信息，并在你关闭文件后继续执行。
 
-## 检查配置信息
+## 查看你的设置
 
-你可以使用以下命令查看当前所有的配置信息：
+如果你想检查刚才的配置是否生效，可以使用：
 
 ```bash
 git config --list
 ```
+这会列出所有 Git 能找到的配置。有时候你会发现同一个配置出现了两次，那是因 Git 会依次读取系统级、用户级和仓库级的配置文件。以最后一个出现的为准。
 
-或者检查某一项特定的配置：
-
-```bash
-git config user.name
-```
+配置 Git 的过程，其实就是根据自己的习惯打磨工具的过程。一把趁手的兵器，能让你在代码世界中挥洒自如。
