--- a/docs/git-tutorial/pro_git_20250107.md
+++ b/docs/git-tutorial/pro_git_20250107.md
@@ -1,37 +1,46 @@
 ---
 slug: git-01-07-getting-help
-title: "1.7 Getting Help — 获取帮助"
+title: "1.7 Getting Help — 此刻，别去读手册"
 authors: [yeezi]
-tags: [git, progit, help, cli]
+tags: [git, progit, 学习方法]
 date: 2025-01-07T14:00:00
 ---
 
-Git 拥有丰富的命令和参数。在使用过程中，如果我们忘记了某个命令的用法，有多种方式可以获取帮助信息。
+在学习新技术的过程中，我们通常会被教导：“有问题去读文档（RTFM）”。
+但对于 Git 的初学者，我有不同的建议：**别在一开始就去啃官方手册（Manpage），除非你做好了心理准备。**
+
+这不是在贬低官方文档的价值，反之，Git 的官方文档以严谨、详尽著称。但也正因为过于严谨，它往往充斥着晦涩的术语。
 
 <!--truncate-->
 
-## 使用命令行帮助
+## 三个层级的求救信号
 
-你可以通过以下三种方式查看 Git 命令的详细手册（Manpage）：
+当你遇到困惑时，Git 提供了三种不同详细程度的帮助方式。
 
-1.  `git help <verb>`
-2.  `git <verb> --help`
-3.  `man git-<verb>`
-
-例如，要查看 `config` 命令的详细帮助：
-
-```bash
-git help config
-```
-
-这些命令通常会打开系统手册页，内容非常详尽和严谨，包含了该命令的所有参数说明和使用示例。对于初学者来说，官方手册可能略显晦涩，但它是最权威的参考资料。
-
-## 快速参考
-
-如果你只是想快速查看某个命令有哪些可用选项，可以使用 `-h` 参数。这会输出一段简洁的帮助信息：
+### 1. 快速回忆 (-h)
+当你仅仅是忘记了一个命令有哪些参数，或者参数的具体写法时，这是最高效的方式。
 
 ```bash
 git add -h
 ```
+它会直接输出一段精炼的常用参数列表，没有废话。在日常开发中，这涵盖了我们 80% 的查询需求。
 
-这通常比查阅完整手册更加高效，不仅能看到常用的参数缩写，还能快速回忆起命令的语法结构。
+### 2. 系统查询 (--help)
+如果你需要了解一个命令的完整定义：
+
+```bash
+git help config
+# 或者
+git config --help
+```
+这会打开详尽的手册页。这里有该命令的所有细节。**建议在你有一定基础，想要深入研究某个特定功能时阅读。**
+
+### 3. IRC 与社区
+虽然不是命令，但我想强调的是，技术不仅仅是冷冰冰的文档。Git 拥有一个非常活跃的全球社区。当你遇到那些文档里没写出或者是由于环境配置导致的诡异问题时，Stack Overflow 或者 IRC 频道往往能给你更具人情味的解答。
+
+## 我的建议
+
+不要试图背诵所有的 Git 命令和参数。那是不可能的，也是没有必要的。
+掌握最核心的工作流命令，至于其他的边缘功能，知道“有这个功能”比知道“怎么敲这个命令”更重要。因为只要你知道它存在，你总能通过 `-h` 或者搜索引擎找到它。
+
+保持好奇心，但不要被细节淹没。
