--- a/docs/git-tutorial/pro_git_20250108_02.md
+++ b/docs/git-tutorial/pro_git_20250108_02.md
@@ -1,48 +1,50 @@
 ---
 slug: git-02-01-getting-repository
-title: "2.1 Repo Basics — 获取 Git 仓库"
+title: "2.1 Repo Basics — 开启 Git 之旅的两种方式"
 authors: [yeezi]
-tags: [git, progit, repo, init, clone]
+tags: [git, progit, 实战]
 date: 2025-01-08T10:00:00
 ---
 
-本章开始介绍 Git 的基础操作。通常有两种方式来获取一个 Git 仓库：一种是将本地现有的目录转换为 Git 仓库，另一种是从服务器克隆现有的 Git 仓库。
+这是实战篇的开篇。在了解了足够多的理论之后，我们终于要开始在硬盘上留下 Git 的足迹了。
+获取一个 Git 仓库（Repository），通常只有两种途径。而这两种途径，对应着两种截然不同的项目启动场景。
 
 <!--truncate-->
 
-## 在现有目录中初始化仓库 (git init)
+## 场景一：从零开始 (git init)
 
-如果你有一个尚未进行版本控制的项目目录，想要用 Git 来管理它，需要执行以下步骤：
+这种场景通常发生在你有一个现有的本地项目，或者你刚刚新建了一个空文件夹准备写代码的时候。你想把这个项目纳入 Git 的版本控制之下。
 
-1.  进入项目目录：
-    ```bash
-    cd my_project
-    ```
-2.  执行初始化命令：
-    ```bash
-    git init
-    ```
+操作非常简单，进入项目目录，然后输入：
 
-该命令会在当前目录下创建一个名为 `.git` 的子目录，其中包含了 Git 仓库的所有必需文件（骨架）。此时，项目中的文件还没有被跟踪。你需要使用 `git add` 和 `git commit` 来进行初次提交。
+```bash
+git init
+```
 
-## 克隆现有的仓库 (git clone)
+当你按下回车的那一刻，虽然表面上似乎什么都没发生，但在幕后，Git 已经默默地在你的目录下创建了一个名为 `.git` 的隐藏子目录。
 
-如果你想获取一份已经存在的 Git 仓库（例如 GitHub 上的开源项目）的拷贝，需要使用 `git clone` 命令。
+**深度解析**：
+这个 `.git` 目录就是 Git 的“大脑”。你所有的提交历史、配置信息、分支指针，全部都存储在这个小小的文件夹里。如果你哪天想让这个项目脱离 Git 的控制，只需要删掉这个文件夹，你的项目就会变回一堆普通的纯文本文件。所有的历史记录也会随之烟消云散。
+
+## 场景二：站在巨人的肩膀上 (git clone)
+
+这是更常见的场景：你想参与一个开源项目，或者加入公司现有的开发团队。你需要把远程服务器上的代码拉取到本地。
+
+这时候我们需要使用 `git clone`：
 
 ```bash
 git clone https://github.com/libgit2/libgit2
 ```
 
-执行该命令后，Git 会做以下几件事：
-1.  在当前目录下创建一个名为 `libgit2` 的文件夹。
-2.  初始化一个 `.git` 目录。
-3.  **下载该仓库的所有数据**（包括所有历史版本）。
-4.  检出最新版本的代码到工作目录。
+**Clone 与 Checkout 的本质区别**：
+如果你用过 SVN，你可能会习惯说“Checkout 代码”。但在 Git 中，我们用的是“Clone（克隆）”。
+这两个词的区别至关重要：
+*   **Checkout** 只是检出最新版本的文件。
+*   **Clone** 则是**复制整个仓库**。
 
-如果你想在这个命令中自定义本地仓库的名字，可以指定第二个参数：
+当你执行 `git clone` 时，Git 会把远程仓库里**每一个文件的每一个历史版本**都拉取到你的 `.git` 目录中。这意味着，即使远程服务器下一秒就炸了，你的电脑里依然保存着这个项目完整的生命史。
 
-```bash
-git clone https://github.com/libgit2/libgit2 mylibgit
-```
+## 协议的选择
 
-Git 支持多种传输协议，最常见的是 `https://` 协议，此外还支持 `git://` 或 `ssh://` 等协议。
+细心的你可能发现了，`git clone` 支持多种协议（`https://`, `git://`, `ssh://`）。
+虽然初学者通常使用 HTTPS 协议（因为它最简单，不用配置密钥），但在职业开发中，配置 SSH 密钥并使用 SSH 协议通常是更推荐的做法，因为它更安全，且能省去每次推送都需要输入密码的繁琐。
