--- a/docs/git-tutorial/pro_git_20250108_03.md
+++ b/docs/git-tutorial/pro_git_20250108_03.md
@@ -1,69 +1,52 @@
 ---
 slug: git-02-02-recording-changes
-title: "2.2 Recording Changes — 记录每次更新"
+title: "2.2 Recording Changes — 艺术家般的代码提交"
 authors: [yeezi]
-tags: [git, progit, status, diff, cli]
+tags: [git, progit, 工作流]
 date: 2025-01-08T11:00:00
 ---
 
-现在我们已经有了一个 Git 仓库，并且检出了文件。接下来我们将进行日常的开发流程：修改文件，将更新暂存，并提交到仓库中。
+如果说 `git clone` 是在搭建舞台，那么这里的操作才是我们每天真正的“演出”。
+在 Git 的世界里，文件的生命周期是一个不断流转的过程。理解这个过程，能让你的代码提交从“一团混乱”变得“井井有条”。
 
 <!--truncate-->
 
-## 检查当前文件状态 (git status)
+## 文件的生命周期
 
-查看哪些文件处于什么状态，主要的命令是 `git status`。
-如果在克隆仓库后立即运行此命令，你会看到类似 "working tree clean" 的提示，说明所有文件都已跟踪且未被修改。
+在你的工作目录中，每一个文件只有两种状态：**已跟踪 (Tracked)** 和 **未跟踪 (Untracked)**。
+而对于已跟踪的文件，它们又会在 **未修改**、**已修改** 和 **已暂存** 之间流转。
 
-如果此时你在目录下创建了一个新文件（例如 `README.md`），再次运行 `git status`，Git 会将其标记为 **Untracked files**（未跟踪文件）。
+## 1. 审视现状 (git status)
 
-## 跟踪新文件 / 暂存已修改文件 (git add)
-
-使用 `git add` 命令可以将文件纳入 Git 的管理（开始跟踪），或者将已修改的文件放入暂存区。
+养成一个好习惯：在执行任何 Git 操作之前，先问问 Git：“现在是什么情况？”
 
 ```bash
-git add README.md
+git status
 ```
+这个命令是你最忠实的助手。它不仅会告诉你哪些文件变了，还会贴心地提示你下一步该根据什么命令去处理这些变化。
 
-`git add` 是一个多功能命令：
-*   对未跟踪文件：开始跟踪。
-*   对已修改文件：放入暂存区。
-*   对合并冲突文件：标记为已解决。
+## 2. 精确控制 (git add)
 
-## 忽略文件 (.gitignore)
+很多初学者习惯用 `git add .` 把所有修改一股脑扔进暂存区。虽方便，但我并不总是推荐这样做。
 
-通常我们会有一些不需要 Git 管理的文件，比如编译生成的临时文件、日志文件等。我们可以创建一个名为 `.gitignore` 的文件来列出要忽略的模式。
+**`git add` 的本质是“在此刻对文件拍一张照片放入暂存区”。**
+这意味着，如果你在 `add` 之后又修改了文件，那么你必须**再次** `add`，否则暂存区里保存的仍然是旧版本。
 
-示例 `.gitignore`：
-```gitignore
-# 忽略所有 .a 结尾的文件
-*.a
-# 但 lib.a 除外
-!lib.a
-# 忽略 build/ 目录下的所有文件
-build/
-```
+暂存区（Staging Area）是 Git 提供给我们的一个**缓冲区**。它允许我们在提交之前，精细地挑选要在下一次提交中包含哪些内容。这就像是在打包行李，你可以先把东西都拿出来（修改），然后一件件整齐地放进箱子（暂存），最后再一次性拉上拉链（提交）。
 
-## 查看已暂存和未暂存的修改 (git diff)
+## 3. 忽略噪音 (.gitignore)
 
-`git status` 只能告诉你文件是否被修改，而 `git diff` 可以告诉你具体修改了哪些内容。
+并非所有文件都值得被记录。日志文件、编译生成的临时文件、系统自动生成的缩略图...这些文件如果混入代码仓库，不仅浪费空间，还会造成干扰。
 
-*   **`git diff`**：查看**工作目录**与**暂存区**之间的差异（即查看尚未暂存的修改）。
-*   **`git diff --staged`**：查看**暂存区**与**最后一次提交**之间的差异（即查看即将提交的内容）。
+创建一个 `.gitignore` 文件，告诉 Git 哪些文件应该被视而不见。
+**最佳实践**：不要等到不该提交的文件已经被提交了，才想起来去配 ignore。在项目一开始，就配置好一份完善的忽略清单。
 
-## 提交更新 (git commit)
+## 4. 赋予意义 (git commit)
 
-当所有需要保存的修改都已暂存后，就可以提交了：
+虽然 `git commit` 只是一个保存动作，但提交信息（Commit Message）的质量，直接体现了一名工程师的素养。
 
-```bash
-git commit
-```
-这将启动你配置的文本编辑器，让你输入提交说明。
+*   ❌ `git commit -m "update"`
+*   ✅ `git commit -m "fix: resolve authenticatoin timeout issue"`
 
-你也可以使用 `-m` 选项直接在命令行中输入提交说明：
-
-```bash
-git commit -m "Add getting started guide"
-```
-
-注意：只有在暂存区（Staged）中的变化才会被提交。
+一个好的提交，应该是一个**逻辑闭环**。它应该只包含解决同一个问题相关的修改，并且有一段清晰的文字说明“为什么”要这么改。
+利用暂存区，你可以把一天杂乱无章的修改，拆解成若干个逻辑清晰的提交。这不仅是为了方便同事审查代码，更是为了方便未来的你回顾这段历史。
