--- a/docs/git-tutorial/pro_git_20250108_04.md
+++ b/docs/git-tutorial/pro_git_20250108_04.md
@@ -1,55 +1,51 @@
 ---
 slug: git-02-03-viewing-history
-title: "2.3 Viewing History — 查看提交历史"
+title: "2.3 Viewing History — 穿梭时光的探照灯"
 authors: [yeezi]
-tags: [git, progit, cli]
+tags: [git, progit, 日志]
 date: 2025-01-08T12:00:00
 ---
 
-在提交了若干更新，或者克隆了某个项目之后，你可能想回顾一下提交历史。完成这个任务最简单而强大的工具是 `git log` 命令。
+代码提交之后并非就尘埃落定了。在软件维护的过程中，我们花费在“回顾旧代码”上的时间，往往比“写新代码”的时间还要多。
+当项目出现 Bug，或者你需要理解某个奇怪的逻辑为什么存在时，`git log` 就是你手中的探照灯。
 
 <!--truncate-->
 
-## 基本用法
+## 不仅仅是流水账
 
-不带任何参数运行 `git log`，Git 会按时间顺序列出所有的提交，最近的更新排在最上面。
-它会显示：
-*   SHA-1 校验和
-*   作者的名字和电子邮件
-*   提交时间
-*   提交说明
+最简单的 `git log` 会按时间倒序列出所有的提交。这对于只有几次提交的项目来说够用了，但对于一个历史悠久的项目，这无异于大海捞针。
 
-## 常用选项
+作为一名资深用户，你需要掌握如何让 `git log` 只展示你关心的信息。
 
-`git log` 提供了非常丰富的选项来定制输出格式和筛选历史记录。
+## 三个维度的筛选
 
-### 1. 简略显示
-使用 `--oneline` 选项可以将每个提交压缩到一行显示，非常适合查看大量的提交历史。
+### 1. 形式的精简 (--oneline)
+这是我最常用的参数。它把每次提交压缩成一行，只保留 SHA-1 校验和的前几位和提交说明。
 
 ```bash
 git log --oneline
 ```
+当你需要快速浏览项目演进脉络，或者查看最近几十次提交的概况时，这个视图非常清爽。
 
-### 2. 显示差异
-使用 `-p` 选项可以显示每次提交所引入的差异（补丁）。如果不希望显示全部内容，可以配合 `-2` 限制显示的日志条数（显示最近 2 次）。
+### 2. 内容的透视 (-p)
+有时候，我不仅想看“谁改了”，更想看“改了什么”。
+`-p` (patch) 参数会将每次提交具体的代码差异展示出来。
 
 ```bash
 git log -p -2
 ```
+配合 `-2` 限制显示的条数，你可以快速复查最近两次提交的具体代码变动。这在 Code Review 或者写日报时非常有用。
 
-### 3. 图形化显示
-使用 `--graph` 选项可以在左侧绘制一个 ASCII 字符组成的图形，形象地展示分支和合并历史。
+### 3. 历史的拓扑 (--graph)
+当项目有了分支和合并，历史记录就不再是一条直线，而是一张复杂的网。
+`--graph` 参数会在左侧用 ASCII 字符绘制出形象的提交树状图。即便在命令行这种简陋的环境下，你也能清晰地看到分支是从哪里分叉、又是何时合并回来的。
 
-```bash
-git log --oneline --graph --all
-```
+## 搜索历史
 
-## 限制输出长度
+除了格式化输出，Git 还提供了强大的搜索能力。
+*   想知道谁写了这段烂代码？ `git blame`（虽然这节主要讲 log，但 blame 也是神器）。
+*   想查找以前的某个 Commit 里是不是提到过 "login" 问题？ `git log --grep="login"`。
+*   想看看上个月到底干了啥？ `git log --since="1 month ago"`。
 
-除了上述选项外，你还可以根据时间、作者等条件进行筛选：
-
-*   `--since=2.weeks`：列出最近两周的所有提交。
-*   `--author="John"`：列出指定作者的提交。
-*   `--grep="fix"`：搜索提交说明中包含 "fix" 的提交。
-
-掌握 `git log` 的使用，能帮助你快速理清项目的演进脉络，定位历史问题。
+**结语**：
+学会高效地查阅日志，你就掌握了与项目过去对话的能力。这能让你在面对复杂的遗留代码时，不再感到迷茫和无助。
