docs: update title format for chapter 3

--- a/docs/git-tutorial/pro_git_20250110_01.md
+++ b/docs/git-tutorial/pro_git_20250110_01.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-01-branching-nutshell
-title: "3.1 分支简介 — 平行宇宙的开启方式"
+title: "Branches in a Nutshell — 平行宇宙的开启方式"
 authors: [yeezi]
 tags: [git, progit, 分支, 原理]
 date: 2025-01-10T09:00:00
