--- a/docs/git-tutorial/pro_git_20250110_03.md
+++ b/docs/git-tutorial/pro_git_20250110_03.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-03-branch-management
-title: "3.3 分支管理 — 保持井井有条"
+title: "Branch Management — 保持井井有条的艺术"
 authors: [yeezi]
 tags: [git, progit, 管理]
 date: 2025-01-10T11:00:00
