--- a/docs/git-tutorial/pro_git_20250110_04.md
+++ b/docs/git-tutorial/pro_git_20250110_04.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-04-branching-workflows
-title: "3.4 分支开发工作流 — 团队协作的艺术"
+title: "Branching Workflows — 团队协作的顶层设计"
 authors: [yeezi]
 tags: [git, progit, 工作流, 最佳实践]
 date: 2025-01-10T12:00:00
