--- a/docs/git-tutorial/pro_git_20250110_05.md
+++ b/docs/git-tutorial/pro_git_20250110_05.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-05-remote-branches
-title: "3.5 远程分支 — 摸得到的幻影"
+title: "Remote Branches — 摸得到的远程幻影"
 authors: [yeezi]
 tags: [git, progit, 远程分支, 跟踪]
 date: 2025-01-10T13:00:00
