--- a/docs/git-tutorial/pro_git_20250110_06.md
+++ b/docs/git-tutorial/pro_git_20250110_06.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-06-rebasing
-title: "3.6 变基 (Rebase) — 修改历史的黑魔法"
+title: "Rebasing — 修改历史的黑魔法"
 authors: [yeezi]
 tags: [git, progit, rebase, 变基]
 date: 2025-01-10T14:00:00
