--- a/docs/git-tutorial/pro_git_20250110_07.md
+++ b/docs/git-tutorial/pro_git_20250110_07.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-07-summary
-title: "3.7 分支总结 — Git 的灵魂"
+title: "Branching Summary — Git 的灵魂所在"
 authors: [yeezi]
 tags: [git, progit, 总结]
 date: 2025-01-10T15:00:00
