--- a/docs/git-tutorial/pro_git_20250110_02.md
+++ b/docs/git-tutorial/pro_git_20250110_02.md
@@ -1,6 +1,6 @@
 ---
 slug: git-03-02-basic-branching-merging
-title: "3.2 分支的新建与合并 — 工作的日常"
+title: "Basic Branching & Merging — 工作的日常与决策"
 authors: [yeezi]
 tags: [git, progit, 合并, 冲突]
 date: 2025-01-10T10:00:00
